--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- Imagem de destaque -->
       <div class="featured-image">
         <figure>
-          <img src="img/DESTAQUE.jpg" alt="Frida Kahlo" />
+          <img src="img/DESTAQUE.jpg" alt="Frida Kahlo" class="img-responsive" />
           <figcaption>Foto de Frida Kahlo</figcaption>
         </figure>
       </div>
@@ -103,7 +103,7 @@
       <!-- Segunda imagem -->
       <div class="img-bold">
         <figure>
-          <img src="img/Frida_Kahlo.jpg" alt="Frida Kahlo" />
+          <img src="img/Frida_Kahlo.jpg" alt="Frida Kahlo" class="img-responsive"/>
         </figure>
         <figcaption>Frida Kahlo na Casa Azul</figcaption>
       </div>
